# gene-specificity

./: .gitignore  README  README.md  app_meta_data  buid-db.sh  cookiecutter.json  dbmodeltest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh
app_meta_data/: curies.json  epc.json
app_meta_data/setup/: setup_data.md
gene_specificity/: app_interface.py  apps.py  curie_walker.py  curies.json  models.py  trapi_exceptions.py  trapi_interface.py  views.py
gene_specificity/app_meta_data/: curies.json  epc.json  meta_knowledge_graph.json  metadata.md
gene_specificity/migrations/: 0001_initial.py  0002_curietemplate_curietemplatematch.py  0003_genetotissue_tissuetogene_delete_specificitymeangene_and_more.py
gene_specificity/scripts/: curie_templater.py  make_curies_and_metakg.py
gene_specificity_testproj/: manage.py
gene_specificity_testproj/gene_specificity_testproj/: asgi.py  settings.py  urls.py  wsgi.py
hooks/: post_gen_hooks.py
scripts/: make_curies_and_metakg.py
unittests/: test_gene_spec_app.py
unittests/test_queries/: bad_curies.json  test_queries.json
{{cookiecutter.repo_name}}/: CONTRIBUTING.md  MANIFEST.in  runtests.py  setup.py  tasks.py
{{cookiecutter.repo_name}}/app_meta_data/: meta_knowledge_graph.json  models.json
{{cookiecutter.repo_name}}/docs/: conf.py
{{cookiecutter.repo_name}}/tests/: settings.py  test_models.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: app_interface.py  apps.py  models.py  trapi_interface.py
