[tool.poetry]
name = "gene_specificity"
version = "0.1.0"
description = "gene specificity lookup app for Connections Hypothesis Provider"
authors = ["veenhouse <luke.veenhuis@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
django-extensions = "^3.1.5"
trapi_model = "git+https://github.com/di2ag/trapi_model.git"
chp_utils = "git+https://github.com/di2ag/chp_utils.git"
reasoner_validator = "git+https://github.com/di2ag/reasoner-validator.git"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylama = "^8.3.8"
django-stubs = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
